--- a/index.html
+++ b/index.html
@@ -3,153 +3,167 @@
 <head>
 <meta charset="UTF-8">
 <title>Imposter</title>
+
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #111;
-    color: white;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
+:root{
+  --bg:#0e0e0e;
+  --text:#ffffff;
+  --accent:#ff3b3b;
+}
 
-  .screen {
-    display: none;
-    padding: 40px;
-  }
+*{
+  box-sizing:border-box;
+}
 
-  .active {
-    display: block;
-  }
+body{
+  margin:0;
+  height:100vh;
+  background:var(--bg);
+  color:var(--text);
+  font-family:system-ui, sans-serif;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
 
-  h1 {
-    font-size: 48px;
-  }
+.screen{
+  display:none;
+  width:100%;
+  height:100%;
+  padding:5vh 5vw;
+  text-align:center;
+}
 
-  .big {
-    font-size: 64px;
-    margin: 30px 0;
-  }
+.active{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
 
-  button {
-    padding: 12px 24px;
-    font-size: 18px;
-    cursor: pointer;
-  }
+h1{
+  font-size:clamp(3rem, 10vw, 6rem);
+  margin-bottom:4vh;
+}
 
-  input[type="range"] {
-    width: 200px;
-  }
+.big{
+  font-size:clamp(4rem, 14vw, 7rem);
+  font-weight:700;
+}
+
+p{
+  font-size:clamp(1.5rem, 4vw, 2.5rem);
+}
+
+button{
+  font-size:clamp(1.5rem, 4vw, 2.5rem);
+  padding:1.2em 2.2em;
+  border:none;
+  border-radius:20px;
+  background:var(--accent);
+  color:white;
+  margin-top:4vh;
+  cursor:pointer;
+}
+
+input[type="range"]{
+  width:70%;
+  max-width:400px;
+  margin:3vh 0;
+  transform:scale(1.4);
+}
 </style>
 </head>
+
 <body>
 
-<!-- TITLE SCREEN -->
 <div id="title" class="screen active">
   <h1>IMPOSTER</h1>
   <p>Players: <span id="playerCount">3</span></p>
   <input type="range" min="3" max="10" value="3" id="playerSlider">
-  <br><br>
-  <button onclick="startGame()">Start Game</button>
+  <button onclick="startGame()">START</button>
 </div>
 
-<!-- GAME START COUNTDOWN -->
 <div id="startCountdown" class="screen">
-  <h1>Game Starting</h1>
+  <h1>Starting In</h1>
   <div class="big" id="startTimer">10</div>
 </div>
 
-<!-- PASS SCREEN -->
 <div id="passScreen" class="screen">
-  <h1>Pass to Player <span id="playerNum"></span></h1>
-  <button onclick="showRole()">Reveal</button>
+  <h1>Pass to Player</h1>
+  <div class="big">#<span id="playerNum"></span></div>
+  <button onclick="showRole()">REVEAL</button>
 </div>
 
-<!-- ROLE SCREEN -->
 <div id="roleScreen" class="screen">
   <div class="big" id="roleText"></div>
-  <p>Memorize!</p>
-  <div id="roleTimer">5</div>
+  <p>Memorize</p>
+  <div class="big" id="roleTimer">5</div>
 </div>
 
 <script>
 const words = [
-  "Pizza", "Beach", "School", "Zoo",
-  "Hospital", "Jungle", "Airport",
-  "Museum", "Park", "Restaurant"
+  "Pizza","Beach","School","Zoo",
+  "Hospital","Jungle","Airport",
+  "Museum","Park","Restaurant"
 ];
 
 let players = 3;
 let imposterIndex;
 let word;
 let currentPlayer = 0;
-let revealTimer;
 
 const slider = document.getElementById("playerSlider");
 slider.oninput = () => {
   document.getElementById("playerCount").textContent = slider.value;
 };
 
-function startGame() {
+function startGame(){
   players = Number(slider.value);
   imposterIndex = Math.floor(Math.random() * players);
   word = words[Math.floor(Math.random() * words.length)];
   currentPlayer = 0;
 
-  showScreen("startCountdown");
-  startCountdown(10, () => {
+  show("startCountdown");
+  countdown("startTimer", 10, nextPlayer);
+}
+
+function nextPlayer(){
+  if(currentPlayer >= players){
+    show("title");
+    return;
+  }
+  document.getElementById("playerNum").textContent = currentPlayer + 1;
+  show("passScreen");
+}
+
+function showRole(){
+  show("roleScreen");
+
+  document.getElementById("roleText").textContent =
+    currentPlayer === imposterIndex ? "IMPOSTER" : word;
+
+  countdown("roleTimer", 5, () => {
+    currentPlayer++;
     nextPlayer();
   });
 }
 
-function nextPlayer() {
-  if (currentPlayer >= players) {
-    showScreen("title");
-    return;
-  }
+function countdown(id, time, done){
+  const el = document.getElementById(id);
+  el.textContent = time;
 
-  document.getElementById("playerNum").textContent = currentPlayer + 1;
-  showScreen("passScreen");
-}
-
-function showRole() {
-  showScreen("roleScreen");
-
-  const roleText = document.getElementById("roleText");
-  roleText.textContent =
-    currentPlayer === imposterIndex ? "IMPOSTER" : word;
-
-  let time = 5;
-  document.getElementById("roleTimer").textContent = time;
-
-  revealTimer = setInterval(() => {
+  const timer = setInterval(() => {
     time--;
-    document.getElementById("roleTimer").textContent = time;
-
-    if (time === 0) {
-      clearInterval(revealTimer);
-      currentPlayer++;
-      nextPlayer();
+    el.textContent = time;
+    if(time <= 0){
+      clearInterval(timer);
+      done();
     }
   }, 1000);
 }
 
-function startCountdown(seconds, callback) {
-  let time = seconds;
-  document.getElementById("startTimer").textContent = time;
-
-  const interval = setInterval(() => {
-    time--;
-    document.getElementById("startTimer").textContent = time;
-
-    if (time === 0) {
-      clearInterval(interval);
-      callback();
-    }
-  }, 1000);
-}
-
-function showScreen(id) {
+function show(id){
   document.querySelectorAll(".screen").forEach(s => s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
