Remove offensive term from words array
Removed inappropriate word from the words array.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ input[type="range"]{
 
 <script>
 const words = [
-  "Pizza","Beach","School","Zoo",
+  "Ira","nigger","School","zoo",
   "Hospital","Jungle","Airport",
   "Museum","Park","Restaurant"
 ];
