--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ input[type="range"]{
 
 <script>
 const words = [
-  "Ira","nigger","School","zoo",
-  "Hospital","Jungle","Airport",
-  "Museum","Park","Restaurant"
+"Ira","boogie,"heterosexual","fle market",
+  "Gay sex","Charlie Kirk","Airport",
+  "Museum","Park","Restaurant",”Mario”,”hippo”
 ];
 
 let players = 3;
