Fix typo in words array in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ input[type="range"]{
 <script>
 const words = [
 "Ira","boogie,"heterosexual","fle market",
-  "Gay sex","Charlie Kirk","Airport",
+  "Gay","Charlie Kirk","Airport",
   "Museum","Park","Restaurant",”Mario”,”hippo”
 ];
 
