--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ input[type="range"]{
 
 <body>
 
+<!-- TITLE SCREEN -->
 <div id="title" class="screen active">
   <h1>IMPOSTER</h1>
   <p>Players: <span id="playerCount">3</span></p>
@@ -84,17 +85,20 @@ input[type="range"]{
   <button onclick="startGame()">START</button>
 </div>
 
+<!-- START COUNTDOWN -->
 <div id="startCountdown" class="screen">
   <h1>Starting In</h1>
   <div class="big" id="startTimer">10</div>
 </div>
 
+<!-- PASS SCREEN -->
 <div id="passScreen" class="screen">
   <h1>Pass to Player</h1>
   <div class="big">#<span id="playerNum"></span></div>
   <button onclick="showRole()">REVEAL</button>
 </div>
 
+<!-- ROLE SCREEN -->
 <div id="roleScreen" class="screen">
   <div class="big" id="roleText"></div>
   <p>Memorize</p>
@@ -103,9 +107,18 @@ input[type="range"]{
 
 <script>
 const words = [
-"Ira","boogie,"heterosexual","fle market",
-  "Gay","Charlie Kirk","Airport",
-  "Museum","Park","Restaurant",”Mario”,”hippo”
+  "Ira",
+  "Boogie",
+  "Heterosexual",
+  "Flea Market",
+  "Gay",
+  "Charlie Kirk",
+  "Airport",
+  "Museum",
+  "Park",
+  "Restaurant",
+  "Mario",
+  "Hippo"
 ];
 
 let players = 3;
@@ -164,7 +177,8 @@ function countdown(id, time, done){
 }
 
 function show(id){
-  document.querySelectorAll(".screen").forEach(s => s.classList.remove("active"));
+  document.querySelectorAll(".screen")
+    .forEach(s => s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 </script>
